[package]
name = "alac-encoder"
version = "0.3.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
rust-version = "1.57"

description = "Rust port of Apple's open source ALAC library"
repository = "https://github.com/LinusU/rust-alac-encoder"
readme = "readme.md"
keywords = ["alac", "apple", "audio", "encoder", "format"]
categories = ["compression", "encoding", "multimedia", "multimedia::encoding"]
license = "Apache-2.0 OR MIT"

exclude = ["fixtures/*"]

[dev-dependencies]
bincode = "^1.1.3"
criterion = "^0.3.5"
serde = { version = "^1.0.90", features = ["derive"] }

[dependencies]
bitvec = { version = "^1.0.0", default-features = false, features = ["alloc"] }
log = "^0.4.14"

[[bench]]
name = "encoding"
harness = false
